# antenna_designer

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.sub  NEXT_STEPS.md  README.md  antenna.py  bowtie.py  bowtie_PyNEC.py  data.json  dipole.py  fandipole.py  fly.toml  hexbeam.py  inverted_v.py  invvee.py  moxon.py  pyproject.toml  setup.py  vertical.py
.github/workflows/: deploy-docs.yml  fly-deploy.yml  main.yml  publish.yml  python-app.yml  ruff.yml  test.yml
docs/: ab-live-compare-notes.md  cebik-design-candidates.md  cloudflare-dns.md  deploy.md  design-audit.md  market-research-antenna-simulators.md  param-degeneracy-audit.md  plan-implicit-band-count.md  website-content-plan.md
docs/ad/: .gitignore  README.md  fetch_fonts.sh  generate_animated.py  generate_static.py
docs/status/: 2026-06-14-trap-fan-dipole.md  2026-06-15-engine-solve-time-comparison.md  2026-06-15-trap-fan-dipole-convergence.md  2026-06-17-bspline-swept-k-batching-plan.md  2026-06-20-arrayblock-pec-ground-plan.md  2026-06-21-hmatrix-pec-ground-plan.md  2026-06-25-solver-selection-benchmark.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09cf5dd15dd1d040_discone_py.html  z_09cf5dd15dd1d040_g5rv_py.html  z_09cf5dd15dd1d040_lpda_py.html  z_09cf5dd15dd1d040_t2fd_py.html  z_122e9c9d52f723bf_bowtie_py.html  z_122e9c9d52f723bf_helix_py.html  z_122e9c9d52f723bf_hentenna_py.html  z_122e9c9d52f723bf_hentenna_slant_py.html  z_122e9c9d52f723bf_hourglass_py.html  z_122e9c9d52f723bf_hourglass_slant_py.html  z_14f6d25602e95197___init___py.html  z_14f6d25602e95197_momwire_py.html  z_14f6d25602e95197_pynec_py.html  z_1e48171eef13c56f___init___py.html  z_1e48171eef13c56f___main___py.html  z_1e48171eef13c56f_abstract_pysim_py.html  z_1e48171eef13c56f_augmented_spline_pysim_py.html  z_1e48171eef13c56f_bspline_py.html  z_1e48171eef13c56f_builder_py.html  z_1e48171eef13c56f_cli_py.html  z_1e48171eef13c56f_core_py.html  z_1e48171eef13c56f_engine_py.html  z_1e48171eef13c56f_far_field_py.html  z_1e48171eef13c56f_geometry_py.html  z_1e48171eef13c56f_nec_export_py.html  z_1e48171eef13c56f_network_py.html  z_1e48171eef13c56f_network_reduce_py.html  z_1e48171eef13c56f_newpysim_py.html  z_1e48171eef13c56f_opt_py.html  z_1e48171eef13c56f_pysim_py.html  z_1e48171eef13c56f_sim_py.html  z_1e48171eef13c56f_spline_py.html  z_1e48171eef13c56f_sweep_py.html  z_1e48171eef13c56f_transform_py.html  z_1e48171eef13c56f_user_designs_py.html  z_1e48171eef13c56f_web_schema_py.html  (+235 more)
scratch/: eval_engines.py
scripts/: bench_build_wires.py  measure_solve_memory.py  profile_compare_engines.py  sterba_center_driven_experiment.py  sterba_driven_experiment.py  sterba_riser_masked_pattern.py  tune_delta_looparray_broadside.py  tune_hexbeam_5band_band.py  tune_hexbeam_5band_coupled.py  verify_delta_looparray_tls.py
site/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  fly.toml  package-lock.json  package.json
site/src/styles/: custom.css
src/antenna_designer/: __init__.py  __main__.py  abstract_pysim.py  builder.py  cli.py  compute_impedance_matrix.pyx  core.py  engine.py  far_field.py  geometry.py  nec_export.py  network.py  network_reduce.py  newpysim.py  opt.py  pysim.py  pysim_accelerators.cpp  sim.py  spline_pysim.py  sweep.py  transform.py  user_designs.py  web_schema.py
src/antenna_designer/designs/: __init__.py  bowtie.py  (+28 more)
src/antennaknobs/: __init__.py  builder.py  cli.py  drone.py  far_field.py  geometry.py  nec_export.py  network_reduce.py  serialize.py  sim.py  sweep.py  user_designs.py
tests/: conftest.py  freq_based_dipole.py  test_array_builder.py  test_bowtie.py  test_bowtiearray.py  test_cebik_designs.py  test_cli.py  test_cli_user_designs.py  test_compare.py  test_design_schemas.py  test_dipole.py  test_draw.py  test_drone.py  test_engine_spec.py  test_fandipole.py  test_fandipole_schema.py  test_hexbeam.py  test_hexbeam_5band.py  test_invvee.py  test_momwire_engine.py  test_moxon.py  test_nec_export.py  test_opt_nested_params.py  test_optimize.py  test_pattern_metrics.py  test_pysim.py  test_pysim_engine.py  test_rawdipole.py  test_resolve_range.py  test_segment_convergence.py  test_serialize.py  test_sici.py  test_spline_pysim.py  test_sterba_center_driven.py  test_sterba_driven.py  test_sweep_freq.py  test_transform.py  test_unit.py  test_unit_core.py  test_unit_sim.py  (+6 more)
tests/subdir/: moxon.py
web/: __init__.py  adapter.py  pynec_backend.py  server.py  user_designs.py
web/examples/: __init__.py  _base.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/user_design_assets/: CLAUDE.md  TEMPLATE.py
web_old/: README.md
(+194 files in other folders)
