[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna_designer-stevenmburns"
version = "0.0.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "An python-based antenna design system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stevenmburns/antenna_designer"
Issues = "https://github.com/stevenmburns/antenna_designer/issues"

[tool.ruff.lint]
ignore = ["E741"]
