[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna_designer-stevenmburns"
version = "0.0.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "An python-based antenna design system"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Web UI: the FastAPI server (web.server:app) needs an ASGI server with
# WebSocket support — the live-solve channel at /ws is a WS upgrade.
# Bare `uvicorn` ships without ws support and fails the handshake at
# runtime; `uvicorn[standard]` pulls in websockets + httptools + uvloop
# (uvloop is no-op on Windows).
web = ["uvicorn[standard]"]

[project.urls]
Homepage = "https://github.com/stevenmburns/antenna_designer"
Issues = "https://github.com/stevenmburns/antenna_designer/issues"

[tool.ruff]
# pysim is a submodule with its own config.
extend-exclude = ["pysim"]

[tool.ruff.lint]
ignore = ["E741"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]
