[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antennaknobs"
version = "0.0.1"
authors = [
  { name="Steven M. Burns", email="smburns47@gmail.com" },
]
description = "Scriptable antenna design with live, knob-driven tuning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Web UI: the FastAPI server (web.server:app) needs an ASGI server with
# WebSocket support — the live-solve channel at /ws is a WS upgrade.
# Bare `uvicorn` ships without ws support and fails the handshake at
# runtime; `uvicorn[standard]` pulls in websockets + httptools + uvloop
# (uvloop is no-op on Windows).
# psutil powers _physical_cpu_count() in web.server — portable across
# Windows/macOS/Linux. Falls back to os.cpu_count() if missing, which
# misfires on chips without HT (pins to half the actual cores).
web = ["uvicorn[standard]", "psutil"]

[project.urls]
Homepage = "https://github.com/stevenmburns/antennaknobs"
Issues = "https://github.com/stevenmburns/antennaknobs/issues"

[tool.pytest.ini_options]
markers = [
    # Tests that run an antenna solver across a *catalog* of named designs
    # (e.g. tests/test_cebik_designs.py) — the same solve code path repeated
    # design after design. Representative solver/engine coverage stays
    # unmarked and runs on every PR; this marker quarantines the per-design
    # repetition to the full main-only run, so the registry can grow toward
    # many designs without inflating PR feedback. Deselect with
    # `-m "not antenna_computation_check"`.
    "antenna_computation_check: solves a named design as part of broad per-design catalog coverage (run on main, not per-PR)",
]

[tool.ruff]
# momwire is a submodule with its own config.
extend-exclude = ["momwire"]

[tool.ruff.lint]
ignore = ["E741"]
# Keep "imported but unused" as a warning instead of auto-stripping.
# Without this, multi-pass edits (add imports first, then add code that
# uses them) can have the import deleted between edits — by the editor's
# format-on-save, the project's auto-fix hook, or a pre-commit run —
# producing a broken next edit. Manual cleanup of unused imports is fine.
unfixable = ["F401"]
